Dodanie komentarza do LogoutController